@@ -24,6 +24,7 @@ my $build = Module::Build->new(
     build_requires          => {
         'Test::More'            => 0.88,
         'Test::Deep'            => 0,
+        'Test::Exception'       => 0,
     },
     auto_configure_requires => 0,
     create_makefile_pl      => 'traditional',
